--- a/publications.html
+++ b/publications.html
@@ -167,7 +167,7 @@
 					<br>
 					<font>ACM International Conference on Advances in Geographic Information Systems (SIGSPATIAL), 2023 </font>
 					<br>
-					<a href="#" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#0099ff">project-data</font></a>
+					<a href="#" target="_blank"><font color="black">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#0099ff">project-data</font></a>
 					<br>
 				</p>
 			</td>
