--- a/publications.html
+++ b/publications.html
@@ -145,7 +145,7 @@
 			<td><img src="./publication/gebd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">A Multi-granularity Decade-Long Geo-Tagged Twitter Dataset for Spatial Computing</font>
+					<font style="font-weight:bold">Local Compressed Video Stream Learning for Generic Event Boundary Detection</font>
 					<br>
 					<font color="#000000" >L. Zhang, X. Gu, C. Li, T. Luo, and H. Fan</font>
 					<br>
@@ -165,7 +165,7 @@
 					<br>
 					<font color="#000000" >Y. Feng, Z. Meng, C. Clemmer, H. Fan, and Y. Huang</font>
 					<br>
-					<font>ACM International Conference on Advances in Geographic Information Systems (SIGSPATIAL), 2023 </font>
+					<font>ACM International Conference on Advances in Geographic Information Systems (<b>SIGSPATIAL</b>), 2023 </font>
 					<br>
 					<a href="#" target="_blank"><font color="black">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#0099ff">project-data</font></a>
 					<br>
