--- a/publications.html
+++ b/publications.html
@@ -151,7 +151,7 @@
 					<br>
 					<font>International Journal of Computer Vision (<b>IJCV</b>), 2023, accepted. </font>
 					<br>
-					<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#0099ff">data</font></a>
+					<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			</td>
