--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>
 
+		<font size="3" color="red"><b>Call for papers:</b></font> <font size="3"> We're organizing a <a href="https://dl.acm.org/pb-assets/static_journal_pages/jats/pdf/JATS_SI_UAVS-CFP-1695933597020.pdf" target="_blank"><font color="#0099ff">special issue</font></a> on <i>Advancements in Uncrewed Aerial Vehicles: Perception, Interaction, Security, Ethics, and
+			Beyond</i> at ACM Journal on Autonomous Transportation Systems. Submissions on related topics are welcome.
+		
+	<HR>	
+
 	<!-- <font size="3" color="red"><b>Postdoctoral positions:</b></font> <font size="3"> Several postdoctoral openings are available. 
 		The general areas of interests include deep learning, spatial intelligence, mobile computing, and robotic coordination. 
 		Check out <a href="https://jobs.untsystem.edu/postings/71770" target="_blank"><font><font color="#0099ff">HERE</font></font></a>.</font>
