--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	<HR>
 	-->
 	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems 
-		in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), Toefl and/or GRE scores to my e-mail (heng.fan@unt.edu). Publications in related fields are plus.<br>
+		in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and Toefl score to my e-mail (heng.fan@unt.edu). Publications in related fields are plus.<br>
 
 		&nbsp; &nbsp;&nbsp; &nbsp;In addition, motivated master and undergraduate students within UNT as well as TAMS high school students are also welcome. If you're interested in conducting research with me, we should talk.</font>
 	
