--- a/teaching/23F-6280/index.htm
+++ b/teaching/23F-6280/index.htm
@@ -205,9 +205,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> Progressive Sparse Local Attention for Video Object Detection, ICCV, 2019. <br>
 				<b>Presenter:</b> <font color="blue">Chenyang Yu</font> <br><br>
 				<b>Paper:</b> Two-shot Video Object Segmentation, CVPR, 2023. <br>
-				<b>Presenter:</b> <font color="blue">Yiran Li</font> <br><br>
-				<b>Paper:</b> XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model, ECCV, 2022.<br>
-				<b>Presenter:</b> 
+				<b>Presenter:</b> <font color="blue">Yiran Li</font> 
 			 </font></td>
 		</tr>
 		<tr>
@@ -217,7 +215,7 @@ course website regularly for updated reading materials.</font>
 		<tr>
 			<td colspan="2" width=400 style='width:80.0pt;background:#e6f4e6;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Paper:</b> F-VLM: Open-Vocabulary Object Detection upon Frozen Vision and Language Models, ICLR, 2023. <br>
-				<b>Presenter:</b> TBD <br><br>
+				<b>Presenter:</b> <font color="blue">Gaoyi Chen</font> <br><br>
 				<b>Paper:</b> Turning a CLIP Model into a Scene Text Detector, CVPR, 2023. <br>
 				<b>Presenter:</b> <font color="blue">Farahnaz Hosseini</font> <br><br>
 				<b>Paper:</b> Visual Programming: Compositional visual reasoning without training, CVPR, 2023.<br>
@@ -263,7 +261,7 @@ course website regularly for updated reading materials.</font>
 				<b>Paper:</b> DropMAE: Masked Autoencoders with Spatial-Attention Dropout for Tracking Tasks, CVPR, 2023. <br>
 				<b>Presenter:</b> TBD <br><br>
 				<b>Paper:</b> Joint-task Self-supervised Learning for Temporal Correspondence, NeurIPS, 2019.<br>
-				<b>Presenter:</b> <font color="blue">Gaoyi Chen</font>
+				<b>Presenter:</b> TBD
 			 </font></td>
 		</tr>
 		<tr>
