--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2023-10:</font> Recognized as the World's top 2% scientists in 2022 by Standford University.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/GX77/LCVSL" target="_blank"><font><font color="#0099ff">code</font></font></a>) on event boundary detection from video stream is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (<a href="https://sigspatial.yunhefeng.me/" target="_blank"><font><font color="#0099ff">project</font></font></a>) on spatial computing is accepted to <a href="https://sigspatial2023.sigspatial.org/" target="_blank"><font><font color="#0099ff">SIGSPATIAL 2023</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-08:</font> A paper (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320323006118" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/chanchanchan97/ICAFusion" target="_blank"><font><font color="#0099ff">code</font></font></a>) on RGB-Thermal object detection is accepted to Pattern Recognition (PR).</li>
