--- a/publications.html
+++ b/publications.html
@@ -197,7 +197,7 @@
 					<br>
 					<font color="#000000" >L. Zhang, L. Jiang, R. Ji, and H. Fan</font>
 					<br>
-					<font>International Journal of Computer Vision (<b>IJCV</b>), 2023, accepted. </font>
+					<font>International Journal of Computer Vision (<b>IJCV</b>), 131: 3170-3192, 2023. </font>
 					<br>
 					<a href="https://arxiv.org/abs/2211.10763" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/lutao2021/PIDray" target="_blank"><font color="#0099ff">code-data</font></a>
 					<br>
