--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2023-12:</font> A paper (pdf) on pedestrian attribute recognition is accepted to Pattern Recognition (PR).</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-12:</font> Check out our DPLNet (<a href="https://arxiv.org/abs/2312.00360" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/ShaohuaDong2021/DPLNet" target="_blank"><font><font color="#0099ff">code</font></font></a>) for efficient multimodal semantic segmentation.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2023-12:</font> Check out our FGDVI (<a href="https://arxiv.org/abs/2311.15368" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/NevSNev/FGDVI" target="_blank"><font><font color="#0099ff">code</font></font></a>) for flow-guided diffusion for video inpainting.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-10:</font> Recognized as the World's top 2% scientists in 2022 by Standford University.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/GX77/LCVSL" target="_blank"><font><font color="#0099ff">code</font></font></a>) on event boundary detection from video stream is accepted to IJCV.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-09:</font> A paper (<a href="https://sigspatial.yunhefeng.me/" target="_blank"><font><font color="#0099ff">project</font></font></a>) on spatial computing is accepted to <a href="https://sigspatial2023.sigspatial.org/" target="_blank"><font><font color="#0099ff">SIGSPATIAL 2023</font></font></a>.</li>
@@ -99,10 +102,11 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 			<a href="https://arxiv.org/abs/2304.11335" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/NevSNev/UniST" target="_blank"><font><font color="#0099ff">code</font></font></a>, 
 			<a href="https://arxiv.org/abs/2309.12867" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/acherstyx/CoCap" target="_blank"><font><font color="#0099ff">code</font></font></a>,
 			<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font><font color="#0099ff">code-data</font></font></a>) are accepted to <a href="https://iccv2023.thecvf.com/" target="_blank"><font><font color="#0099ff">ICCV 2023</font></font></a>.</li>
+		<!--
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Appointed as an Area Chair for <a href="https://wacv2024.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2024</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-05:</font> Release MaGIC (<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/yeates/MaGIC" target="_blank"><font><font color="#0099ff">code</font></font></a>) for multi-modality guided image completion and generation.</li>
 
-		<!--
+		
 		<li><font style="font-weight:bold; line-height: 120%">2023-03:</font> Check out PlanarTrack (<a href="https://arxiv.org/abs/2303.07625" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://hengfan2010.github.io/projects/PlanarTrack/" target="_blank"><font><font color="#0099ff">project</font></font></a>) for large-scale challenging planar object tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-02:</font> A paper on visual object tracking is accepted to The Innovation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-01:</font> Welcome PhD student Shaohua Dong to join our team.</li>
