--- a/teaching.html
+++ b/teaching.html
@@ -30,10 +30,10 @@
 	<br>
 	
 	<ul style="margin-top:5px;">
-		
+		<!-- [<a href="https://hengfan2010.github.io/teaching/23F-6280/index.htm" target="_blank"><font color="#0099ff">course website</font></a>] -->
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023. [<a href="https://hengfan2010.github.io/teaching/23F-6280/index.htm" target="_blank"><font color="#0099ff">course website</font></a>]
+				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023. 
 				<br>
 			</p>
 		</li>
