--- a/projects/AnimalTrack/download.html
+++ b/projects/AnimalTrack/download.html
@@ -46,11 +46,11 @@
 	  </div>
       <br>
 	  
-	  <div class="section Highlights" ,="" id="Highlights" style="margin-top: -25px;">
+	  <!-- <div class="section Highlights" ,="" id="Highlights" style="margin-top: -25px;">
         <h3 style="margin-bottom: 10px;color:red">The download links will be made available soon!</h3>
       </div>
 	  
-	  <HR style="width:98%;margin:0 auto;border: 0;height: 2px;background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0))">
+	  <HR style="width:98%;margin:0 auto;border: 0;height: 2px;background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0))"> -->
 	  
 	  <div class="section Highlights" ,="" id="Highlights" style="margin-top: 10px;">
         <h3 style="margin-bottom: 10px;">Data Format</h3>
