--- a/publications.html
+++ b/publications.html
@@ -40,6 +40,70 @@
 			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
+					<br>
+					<font color="#000000" >X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang</font>
+					<br>
+					<font>arXiv:2401.01578, 2024. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#0099ff">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Efficient Multimodal Semantic Segmentation via Dual-Prompt Learning</font>
+					<br>
+					<font color="#000000" >S. Dong, Y. Feng, Q. Yang, Y. Huang, D. Liu, and H. Fan</font>
+					<br>
+					<font>arXiv:2312.00360, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2312.00360" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/ShaohuaDong2021/DPLNet" target="_blank"><font color="#0099ff">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+		
+		<tr>
+			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Flow-Guided Diffusion for Video Inpainting</font>
+					<br>
+					<font color="#000000" >B. Gu, Y. Yu, H. Fan, and L. Zhang</font>
+					<br>
+					<font>arXiv:2311.15368, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2311.15368" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/NevSNev/FGDVI" target="_blank"><font color="#0099ff">code</font></a>  
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+					<font style="font-weight:bold">Divert More Attention to Vision-Language Object Tracking</font>
+					<br>
+					<font color="#000000" >M. Guo, Z. Zhang, L. Jing, H. Ling, and H. Fan</font>
+					<br>
+					<font>arXiv:2307.10046, 2023. </font>
+					<br>
+					<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <font color="#0099ff">code</font>
+					<br>
+				</p>
+			</td>
+		</tr>
+
+		<tr>
+			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td valign=top>
+				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">AttMOT: Improving Multiple-Object Tracking by Introducing Auxiliary Pedestrian Attributes</font>
 					<br>
 					<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
