--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2024-01:</font> Check out our CG-STVG (<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/HengLan/CGSTVG" target="_blank"><font><font color="#0099ff">code</font></font></a>) on spatio-temporal video grounding.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-12:</font> Check out our FGDVI (<a href="https://arxiv.org/abs/2311.15368" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/NevSNev/FGDVI" target="_blank"><font><font color="#0099ff">code</font></font></a>) on flow-guided diffusion for video inpainting.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-12:</font> Check out our DPLNet (<a href="https://arxiv.org/abs/2312.00360" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/ShaohuaDong2021/DPLNet" target="_blank"><font><font color="#0099ff">code</font></font></a>) on efficient multimodal semantic segmentation.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2023-12:</font> A paper (<a href="https://arxiv.org/abs/2312.06049" target="_blank"><font><font color="#0099ff">pdf</font></font></a>) on pedestrian attribute recognition is accepted to Pattern Recognition (PR).</li>
