--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 	<table border=0 cellpadding=4>
 
 		<tr>
-			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/cgstvg.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
@@ -53,7 +53,7 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/dplnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Efficient Multimodal Semantic Segmentation via Dual-Prompt Learning</font>
@@ -69,7 +69,7 @@
 		</tr>
 		
 		<tr>
-			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/fgd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Flow-Guided Diffusion for Video Inpainting</font>
@@ -85,7 +85,7 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+			<td><img src="./publication/vlt23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Divert More Attention to Vision-Language Object Tracking</font>
@@ -198,28 +198,69 @@
 
 	</table>
 
+	<HR>
+		<font size="4" color="#034f84"><b>2024 / in press</b></font>
+		<br>
+	
+		<table border=0 cellpadding=4>
+	
+			<tr>
+				<td><img src="./publication/gebd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Local Compressed Video Stream Learning for Generic Event Boundary Detection</font>
+						<br>
+						<font color="#000000" >L. Zhang, X. Gu, C. Li, T. Luo, and H. Fan</font>
+						<br>
+						<font>International Journal of Computer Vision (<b>IJCV</b>), 2024, in press. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#0099ff">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+	
+			<tr>
+				<td><img src="./publication/sspnet.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">SSPNet: Scale and Spatial Priors Guided Generalizable and Interpretable Pedestrian Attribute Recognition</font>
+						<br>
+						<font color="#000000" >J. Shen, T. Guo, X. Zuo, H. Fan, and W. Yang</font>
+						<br>
+						<font>Pattern Recognition (<b>PR</b>), 148: 110194, 2024. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2312.06049" target="_blank"><font color="#0099ff">paper</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">ICAFusion: Iterative Cross-Attention Guided Feature Fusion for Multispectral Object Detection</font>
+						<br>
+						<font color="#000000" >J. Shen, Y. Chen, Y. Liu, X. Zuo, H. Fan, and W. Yang</font>
+						<br>
+						<font>Pattern Recognition (<b>PR</b>), 145: 109913, 2024. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2308.07504" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/chanchanchan97/ICAFusion" target="_blank"><font color="#0099ff">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+			
+	
+		</table>
+
 
 	<HR>
 	<font size="4" color="#034f84"><b>2023</b></font>
 	<br>
 
 	<table border=0 cellpadding=4>
-
-		<tr>
-			<td><img src="./publication/gebd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Local Compressed Video Stream Learning for Generic Event Boundary Detection</font>
-					<br>
-					<font color="#000000" >L. Zhang, X. Gu, C. Li, T. Luo, and H. Fan</font>
-					<br>
-					<font>International Journal of Computer Vision (<b>IJCV</b>), 2023, accepted. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#0099ff">code</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
 
 		<tr>
 			<td><img src="./publication/sigspatial-23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -232,22 +273,6 @@
 					<font>ACM International Conference on Advances in Geographic Information Systems (<b>SIGSPATIAL</b>), 2023 </font>
 					<br>
 					<a href="./publication/SIGSPATIAL-2023.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#0099ff">project-data</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
-			<td><img src="./publication/ica.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">ICAFusion: Iterative Cross-Attention Guided Feature Fusion for Multispectral Object Detection</font>
-					<br>
-					<font color="#000000" >J. Shen, Y. Chen, Y. Liu, X. Zuo, H. Fan, and W. Yang</font>
-					<br>
-					<font>Pattern Recognition (<b>PR</b>), 2023, accepted. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2308.07504" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/chanchanchan97/ICAFusion" target="_blank"><font color="#0099ff">code</font></a>
 					<br>
 				</p>
 			</td>
