--- a/teaching/24S-5218/course_project.htm
+++ b/teaching/24S-5218/course_project.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2023</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2024</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -71,10 +71,10 @@ div img:hover{
 	<font size="4">The timeline of the course project is as follows</font>
 	<ul>
 		<li>
-			<font size="4"> Proposal deadline: <font color="#FF0000">March 16, 2023</font></font>
+			<font size="4"> Proposal deadline: <font color="#FF0000">March 9, 2024</font></font>
 		</li>
 		<li>
-			<font size="4"> Final report deadline: <font color="#FF0000">April 21, 2023</font></font>
+			<font size="4"> Final report deadline: <font color="#FF0000">April 21, 2024</font></font>
 		</li>
 		<!-- <li>
 			<font size="4"> Presentation: <font color="#FF0000">Check it <a href="presentation_schedule.htm" target="_blank"><font color="#0099ff">here</font></a>.   </font></font>
@@ -192,6 +192,10 @@ div img:hover{
 	<br>
 	
 	You can find many good examples for the course project report at  <a href="http://cs231n.stanford.edu/2017/reports.html" target="_blank"><font color="#0099ff">here</font></a> (remember to format it using CVPR style).
+
+	<br>
+	<br>
+	<font size="4"><font color="#FF0000">Note: Submissions not using required template will not be accepted.</font></font>
 	</font>
 	
 	<HR>
