--- a/teaching.html
+++ b/teaching.html
@@ -40,7 +40,7 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 5218/4930, Deep Learning, Spring 2022, Spring 2023.
+				CSCE 5218/4930, Deep Learning, Spring 2022, Spring 2023, Spring 2024 [<a href="https://hengfan2010.github.io/teaching/24S-5218/index.htm" target="_blank"><font color="#0099ff">course website</font></a>].
 				<br>
 			</p>
 		</li>
