--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -71,10 +71,10 @@ div img:hover{
 		
 		<br>
 		<li>
-			<font size="4"> TA: To be assigned</font>
+			<font size="4"> IA: Rinoj Gautam (RinojGautam@my.unt.edu)</font>
 		</li>
 		<li>
-			<font size="4"> Office hours: TBD</font>
+			<font size="4"> IA: Piyush Deepak Hemnani (PiyushHemnani@my.unt.edu)</font>
 		</li>
 	</ul>
 	</p>
