--- a/publications.html
+++ b/publications.html
@@ -132,22 +132,6 @@
 			</td>
 		</tr>
 
-		<tr>
-			<td><img src="./publication/magic.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">MaGIC: Multi-modality Guided Image Completion</font>
-					<br>
-					<font color="#000000" >Y. Yu, H. Wang, T. Luo, H. Fan, and L. Zhang</font>
-					<br>
-					<font>arXiv:2307.08629, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/yeates/MaGIC" target="_blank"><font color="#0099ff">code</font></a> &nbsp; <a href="http://www.yongshengyu.com/MaGIC-Page/" target="_blank"><font color="#0099ff">project</font></a>
-					<br>
-				</p>
-			</td>
-		</tr>
-
 		 <tr>
 			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
@@ -204,6 +188,22 @@
 	
 		<table border=0 cellpadding=4>
 	
+			<tr>
+				<td><img src="./publication/magic.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">MaGIC: Multi-modality Guided Image Completion</font>
+						<br>
+						<font color="#000000" >Y. Yu*, H. Wang*, T. Luo, H. Fan, and L. Zhang (*equal contribution)</font>
+						<br>
+						<font>International Conference on Learning Representations (<b>ICLR</b>), 2024. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2305.11818" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="http://www.yongshengyu.com/MaGIC-Page/" target="_blank"><font color="#0099ff">project</font></a> &nbsp; <a href="https://github.com/yeates/MaGIC" target="_blank"><font color="#0099ff">code</font></a> 
+						<br>
+					</p>
+				</td>
+			</tr>
+
 			<tr>
 				<td><img src="./publication/gebd.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
