--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/" target="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/"><font color="#0099ff">LinkedIn</font></a>]
 			[<a href="https://dblp.org/pid/20/10120-1.html" target="https://dblp.org/pid/20/10120-1.html"><font color="#0099ff">DBLP</font></a>]
+			[<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#0099ff">AI Seminar</font></a>]
         </div>
     </div>
 	<!--
