--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -1,54 +1,137 @@
-
 <!DOCTYPE html>
-<!-- saved from url=(0042)https://cse.buffalo.edu/~jmeng2/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script async="" src="./page_files/analytics.js.download"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-3974203-1', 'auto'); ga('send', 'pageview');</script>
-    
+<html>
+<head>
     <title>AI Seminar-Spring 2024</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../stylefiles/global.css">
-    <link rel="stylesheet" type="text/css" href="../stylefiles/navigation.css">
-	<link rel="stylesheet" type="text/css" href="../stylefiles/home.css">
-	<link rel="shortcut icon" href="../personal/favicon.ico" />
-	<style>a{ TEXT-DECORATION:none}a:hover{TEXT-DECORATION:underline }</style>
-	<!-- <style>a{ TEXT-DECORATION:none }</style>-->   <!-- change style for hyperlink -->
+    <style>
+        body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; }
+        .header { background-color: #00853E; color: white; text-align: center; padding: 10px 0; }
+        .main { 
+            padding: 15px; 
+            text-align: center;
+            margin: auto;
+            max-width: 1000px;
+        }
+        .main h2 { color: #333; }
+        .section { 
+            background-color: #f2f2f2; 
+            margin-top: 20px; 
+            padding: 10px; 
+            border: 1px solid #dddddd; 
+            box-shadow: 0px 0px 10px 0px rgba(0, 135, 62, 0.2); 
+            border-radius: 5px;
+            text-align: left;
+        }
+        .speaker { 
+            display: flex; 
+            align-items: center; 
+        }
+        .speaker-text { 
+            flex: 1; 
+        }
+        .speaker-img { 
+            flex: 0 0 200px; 
+            text-align: right; 
+        }
+        .speaker-img img { 
+            width: 150px; 
+        height: auto; 
+        border-radius: 10px; 
+        }
+        .register, .contact { 
+            text-align: left; 
+            margin-top: 20px; 
+            padding: 10px;
+            background-color: #f2f2f2;
+        }
+        label, input, button { 
+            display: block; 
+            width: 100%; 
+            margin-top: 10px; 
+        }
+        input, button { 
+            padding: 10px; 
+        }
+        button { 
+            background-color: #00853E; 
+            color: white; 
+            border: none; 
+            cursor: pointer; 
+        }
+        button:hover { 
+            background-color: #005f27; 
+        }
+        a { 
+            color: #438aec; 
+            text-decoration: none; 
+        }
+    </style>
 </head>
+<body>
+    <div class="header">
+        <h1>Artificial Intelligence (AI) Seminar</h1>
+        <h2>Spring 2024</h2>
+		<h3>Organizers: Drs. Heng Fan, Yunhe Feng, and Weishi Shi</h3>
+    </div>
 
-<body data-gr-c-s-loaded="true">
+    <div class="main">
+        <section style="text-align: left;">
+            <h2>About the AI Seminar</h2>
+            <p>This is the home page for the UNT Artificial Intelligence (AI) Seminar Series, which aim to cover a broad variety of AI topics, such as computer vision, machine learning, AI fairness & ethics, multimodal learning, etc. 
+			The goal is to facilitate research discussion and collaboration in different areas of AI.</p>
+			<p><b>Time:</b> Unless otherwise noted, the events are on Mondays at 11:00am-12:00pm (usually every one or two weeks).</p>
+			<p><b>Room:</b> Unless otherwise noted, we will meet at Discover Park F219 or F285 in person (see details in each event).<br></p>
+        </section>
 
-<style type="text/css">
-div img{
-  cursor: pointer;
-  transition: all 0.6s;
-}
-div img:hover{
-  transform: scale(1.8);
-}
-.underlinedist{ padding-bottom:3px; border-bottom:1px solid #000} 
-</style>
+		
 
+		<h2><font color="#FA8072">Upcoming Events</font></h2>
 
-<div class="central_body">
-	
-	
-	
-    <font size="5"><center><b>AI Seminar</b></center></font>
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Learning Vision-Language Models for Video Understanding</font></h3>
+                <p><b>Speaker:</b> <a href="https://hengfan2010.github.io/", target="_blank">Dr. Heng Fan, University of North Texas</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02/05/2024 (Monday)</p>
+                <p><b>Room:</b> Discover Park F285</p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome1.png" alt="Speaker Image"> 
+            </div>
+        </section>
 
-	
-    <p style="margin-top:5px;">
-	<center>
-	<font size="4"> <b>Spring 2024</b></font> 
-	<br>
-	</center>
-	</p>
-	
-	<HR>
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">TBD</font></h3>
+                <p><b>Speaker:</b> <a href="https://scholar.google.com/citations?user=nAPZIPsAAAAJ&hl=en", target="_blank">Dr. Weishi Shi, University of North Texas</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02/19/2024 (Monday)</p>
+                <p><b>Room:</b> TBD</p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome2.png" alt="Speaker Image"> 
+            </div>
+        </section>
 
-		Under construction, stay tuned ...
-	
-	<HR>
+        <br>
 
-	
-	
-</div>
+        <!-- <h2><font color="#7FB3D5">Past Events</font></h2>
 
-</body></html>
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Learning Vision-Language Models for Video Understanding</font></h3>
+                <p><b>Speaker:</b> <a href="https://hengfan2010.github.io/", target="_blank">Dr. Heng Fan, University of North Texas</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02/05/2024 (Monday)</p>
+                <p><b>Room:</b> Discover Park F285</p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome1.png" alt="Speaker Image"> 
+            </div>
+        </section>
+
+        <br> -->
+
+        <section style="text-align: left;">
+            <h3>Contact Us</h3>
+            <p>Please email the organizers.</p>
+        </section>
+    </div>
+</body>
+</html>
