--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -112,8 +112,8 @@
 
         <br>
 
-        <!-- <h2><font color="#7FB3D5">Past Events</font></h2>
-
+        <h2><font color="#7FB3D5">Past Events</font></h2>
+		<!-- 
         <section class="section speaker">
             <div class="speaker-text">
                 <h3><font color="#355DDC">Learning Vision-Language Models for Video Understanding</font></h3>
@@ -125,8 +125,8 @@
                 <img src="welcome1.png" alt="Speaker Image"> 
             </div>
         </section>
-
-        <br> -->
+		-->		
+        <br> 
 
         <section style="text-align: left;">
             <h3>Contact Us</h3>
