--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -181,7 +181,7 @@ course website regularly for updated reading materials.</font>
 	
 	
 	
-	<!-- <HR>
+	<HR>
 
 	<p style="margin-top:5px;">
 	<font size="4"> <b><font color="#FF0000">Paper review list</font></b></font> 
@@ -193,7 +193,7 @@ course website regularly for updated reading materials.</font>
 	(<font size="4" color="#FF0000">Paper review lists will be gradually added.</font>) 
 
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 2/19</font>):</font>
+	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 2/8</font>):</font>
 	<ol >
 		<li >
 			<font size="4" > A Krizhevsky, I Sutskever, and G Hinton, ImageNet Classification with Deep Convolutional Neural Networks, <i>NeurIPS</i>, 2012.</font>
@@ -204,6 +204,7 @@ course website regularly for updated reading materials.</font>
 		
 	</ol>
 	</p>
+	<!--
 	
 	<p style="text-align:justify">
 	<font size="4" ><b>Paper review list 2</b> (<font size="4" color="#FF0000">due on 2/26</font>):</font>
@@ -338,6 +339,24 @@ course website regularly for updated reading materials.</font>
 				<font size="4"><b>Neural network basics-2</b>  </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 4.2, 4.3, 6 </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  <b>Week 3</b> <br> 1/30 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>Canceled</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/1 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>Deep neural network training-1</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 
