--- a/teaching/24S-5218/paper_review.htm
+++ b/teaching/24S-5218/paper_review.htm
@@ -31,12 +31,12 @@ div img:hover{
 	
 	
 	
-    <font size="5"><center><b>CSCE 5218 & 4930 – Deep Learning</b></center></font>
+    <font size="5"><center><b>CSCE 5218 – Deep Learning</b></center></font>
 
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2022</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2024</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -72,6 +72,10 @@ div img:hover{
 		</br>
 		<li>
 			<font size="4" > Paper summaries will be graded electronically. I will update the score through Canvas. For each paper, the best score is 100.</font>
+		</li>
+		</br>
+		<li>
+			<font size="4" > Format: CVPR (2024) latex template (https://cvpr.thecvf.com/Conferences/2024/AuthorGuidelines) with one column (see the provided example).</font>
 		</li>
 	</ol>
 	</p>
