--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -80,6 +80,7 @@
 			The goal is to facilitate research discussion and collaboration in different areas of AI.</p>
 			<p><b>Time:</b> Unless otherwise noted, the events are on Mondays at 11:00am-12:00pm (usually every one or two weeks).</p>
 			<p><b>Room:</b> Unless otherwise noted, we will meet at Discover Park F219 or F285 in person (see details in each event).<br></p>
+            <p><b>Who can attend?</b> All students (PhD/MS/Undergraduate/K-12 students) who are interested in AI are welcome to attend.</p>
         </section>
 
 		
