--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -375,7 +375,7 @@ course website regularly for updated reading materials.</font>
 				<font size="4"><b>PyTorch Tutorial</b>  </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Guest Lecture </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Guest Lecture by Xiaoqiong Liu</font></td>
 		</tr>
 
 		<!-- 
