--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -94,7 +94,7 @@
                 <h3><font color="#355DDC">Hey Genius, Don’t Forget to Take Your Test!</font></h3>
                 <p><b>Speaker:</b> <a href="https://scholar.google.com/citations?user=nAPZIPsAAAAJ&hl=en", target="_blank">Dr. Weishi Shi, University of North Texas</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 02/19/2024 (Monday)</p>
-                <p><b>Room:</b> TBD</p>
+                <p><b>Room:</b> Discover Park F219</p>
             </div>
             <div class="speaker-img">
                 <img src="welcome2.png" alt="Speaker Image"> 
