--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 		<a href="https://scholar.google.com/" target="_blank"><font color="#0099ff">gScholar</font></a>   &nbsp; 
 		<a href="http://maps.google.com/" target="_blank"><font color="#0099ff">gMap</font></a>   &nbsp; 
 		<a href="https://www.thecvf.com/" target="_blank"><font color="#0099ff">CVF</font></a>   &nbsp; 
-		<a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank"><font color="#0099ff">IEEE</font></a>
+		<a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank"><font color="#0099ff">IEEE</font></a> &nbsp; 
+		<a href="https://csrankings.org/#/index?all&us" target="_blank"><font color="#0099ff">CSRankings</font></a>
 	
 	<HR>
 	
