--- a/service.html
+++ b/service.html
@@ -39,10 +39,16 @@
 			</p>
 		</li>
 		
-		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Co-organizer, International Workshop on Computer Vision for UAVs in (<font style="font-weight:bold">ECCV</font>), 2020
+				Co-organizer, International Workshop on New Trends in AI-Generated Media and Security in <font style="font-weight:bold">AVSS</font>, 2024
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Co-organizer, International Workshop on Computer Vision for UAVs in <font style="font-weight:bold">ECCV</font>, 2020
 				<br>
 			</p>
 		</li>
