--- a/service.html
+++ b/service.html
@@ -27,7 +27,7 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>Conference Organizing Committee</b></font>
+	<font size="4" color="#034f84"><b>Senior Conference Committee</b></font>
 	<br>
 	
     <ul style="margin-top:5px;">
