--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -90,7 +90,7 @@
         
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">TBD</font></h3>
+                <h3><font color="#355DDC">Addressing Bias in AI</font></h3>
                 <p><b>Speaker:</b> <a href="https://yunhefeng.me/", target="_blank">Dr. Yunhe Feng, University of North Texas</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 02/26/2024 (Monday)</p>
                 <p><b>Room:</b> Discover Park F219</p>
