--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Context-Guided Spatio-Temporal Video Grounding</font>
 					<br>
-					<font color="#000000" >X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang</font>
+					<font color="#000000" >X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang (*equal contribution)</font>
 					<br>
 					<font>arXiv:2401.01578, 2024. </font>
 					<br>
