--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 			[<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#0099ff">AI Seminar</font></a>]
         </div>
     </div>
-	<!--
-	<font size="4" color="red"><b>I will be joining University of North Texas (UNT) as an assistant professor in Fall 2021.</b></font>
-	-->
 	
 	<HR>
 	
@@ -60,25 +57,15 @@ src="personal/at.gif">cs.stonybrook.edu  -->
     
 	<HR>
 	
-	<!--
-	<font size="4" color="#034f84"><b>Call for participation</b></font>
-    <ul style="margin-top:5px;">
-		<li>ECCV 2020 <a href="http://uavisionvisdrone.com/#/index/home/"><font color="#0099ff">International Workshop on Computer Vision for UAVs</font></a>.</li>
-    </ul>
 	
-	<HR>
-	-->
-	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems 
-		in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). Publications in related fields are plus.<br>
+	<font size="3" color="red"><b>To prospective students:</b></font> <font size="3"> I am looking for <b><i>self-motivated</i> PhD students</b> to work on interesting problems in computer and robotic vision, with a focus on <i>general video analysis</i>. Solid background in mathematics and programming is required. If you're interested, please send your CV, transcript(s), and test scores to my e-mail (heng.fan@unt.edu). Publication in related fields is a plus.<br>
 
-		&nbsp; &nbsp;&nbsp; &nbsp;In addition, motivated master and undergraduate students within UNT as well as TAMS high school students are also welcome. If you're interested in conducting research with me, we should talk.</font>
+	&nbsp; &nbsp;&nbsp; &nbsp;In addition, motivated master and undergraduate students within UNT as well as TAMS high school students are also welcome. If you're interested in conducting research with me, we should talk.</font>
 	
-	<HR>
+	<!-- <HR>
 
 		<font size="3" color="red"><b>Call for papers:</b></font> <font size="3"> We're organizing a <a href="https://dl.acm.org/pb-assets/static_journal_pages/jats/pdf/JATS_SI_UAVS-CFP-1695933597020.pdf" target="_blank"><font color="#0099ff">special issue</font></a> on <i>Advancements in Uncrewed Aerial Vehicles: Perception, Interaction, Security, Ethics, and
-			Beyond</i> at ACM Journal on Autonomous Transportation Systems. Submissions on related topics are welcome.
-		
-	<HR>	
+			Beyond</i> at ACM Journal on Autonomous Transportation Systems. Submissions on related topics are welcome. -->
 
 	<!-- <font size="3" color="red"><b>Postdoctoral positions:</b></font> <font size="3"> Several postdoctoral openings are available. 
 		The general areas of interests include deep learning, spatial intelligence, mobile computing, and robotic coordination. 
@@ -86,7 +73,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 	
 	<HR>  -->
 	
-	
+	<HR>
+
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">2024-02:</font> Three papers are accepted to <a href="https://cvpr.thecvf.com/" target="_blank"><font><font color="#0099ff">CVPR 2024</font></font></a>.</li>
