--- a/service.html
+++ b/service.html
@@ -79,7 +79,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				European Conference on Computer Vision (<font style="font-weight:bold">ECCV</font>)</font>, <font size="3">2020, 2022</font>
+				European Conference on Computer Vision (<font style="font-weight:bold">ECCV</font>)</font>, <font size="3">2020, 2022, 2024</font>
 				<br>
 			</p>
 		</li>
