--- a/group.html
+++ b/group.html
@@ -27,7 +27,7 @@
 <div class="central_body">
 	
 	
-	<font size="4" color="#034f84"><b>Current Students</b></font>
+	<font size="4" color="#034f84"><b>Current Students at UNT</b></font>
 	<br>
 	<ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
@@ -36,6 +36,15 @@
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, Master student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, Master student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, TAMS High School student</li>
+    </ul>
+
+	<font size="4" color="#034f84"><b>External Students</b></font>
+	<br>
+	<ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">Xin Gu</font>, PhD student (University of Chinese Academy of Sciences)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Yifan Jiao</font>, MS student (Institute of Software Chinese Academy of Sciences)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Yunhao Li</font>, MS student (Institute of Software Chinese Academy of Sciences)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Bohai Gu</font>, MS student (Institute of Software Chinese Academy of Sciences)</li>
     </ul>
 
 
