--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 src="personal/at.gif">cs.stonybrook.edu  -->
 			<br>
 			
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://docs.google.com/presentation/d/1BROZSdbh_NBgB7OAP7TNYaWD0_HWYLSr/edit?usp=sharing&ouid=116478199769662584478&rtpof=true&sd=true" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
-			<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>] -->
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#0099ff">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/" target="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/"><font color="#0099ff">LinkedIn</font></a>]
 			[<a href="https://dblp.org/pid/20/10120-1.html" target="https://dblp.org/pid/20/10120-1.html"><font color="#0099ff">DBLP</font></a>]
