--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,7 @@
 
 	<font size="3">For full publication list, please go to <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>.</font>
 	<br>
+	<!-- Note: * equal contribution &nbsp; &dagger;equal advising -->
 	<HR>
 	
 	<font size="4" color="#034f84"><b>Pre-prints</b></font>
