--- a/publications.html
+++ b/publications.html
@@ -228,7 +228,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">MaGIC: Multi-modality Guided Image Completion</font>
 						<br>
-						<font color="#000000">Y. Yu*, H. Wang*, T. Luo, H. Fan, and L. Zhang (*equal contribution)</font>
+						<font color="#000000">H. Wang*, Y. Yu*, T. Luo, H. Fan, and L. Zhang (*equal contribution)</font>
 						<br>
 						<font>International Conference on Learning Representations (<b>ICLR</b>), 2024. </font>
 						<br>
