--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -94,7 +94,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">TBD</font></h3>
+                <h3><font color="#355DDC">Small Language Model</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Hanzi Zhang</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 03/18/2024 (Monday)</p>
                 <p><b>Room:</b> Discover Park F270 </p>
