--- a/prospective-students.html
+++ b/prospective-students.html
@@ -22,7 +22,7 @@
 	<br><br>
 	
 	<font >
-		I usually look for <b>one or two</b> self-motivated PhD students each year (starting in Spring or Fall) to work on challenging problems in computer vision, such as visual tracking (in 2D videos or point clouds), video object detection, segmentation, visual attack and defense and other related areas. Qualified students will be supported by research or teaching assistantships. If you'd like to know my research work, please refer to my publications at <a href="https://hengfan2010.github.io/publications.html" target="_blank"><font color="#0099ff">this page</font></a>.
+		I usually look for <b>one</b> self-motivated PhD student each year (starting in Spring or Fall) to work on challenging problems in computer vision. Qualified students will be supported by research or teaching assistantships. If you'd like to know my research work, please refer to my publications at <a href="https://hengfan2010.github.io/publications.html" target="_blank"><font color="#0099ff">this page</font></a>.
 		
 		<br><br>
 		
