--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">Beyond MOT: Semantic Multi-Object Tracking</font>
 					<br>
-					<font color="#000000" >Y. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan<sup>&dagger;</sup>, and L. Zhang<sup>&dagger;</sup> (&dagger;equal advising)</font>
+					<font color="#000000" >Y. Li, H. Wang, X. Ma, J. Yao, S. Dong, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
 					<br>
 					<font>arXiv:2403.05021, 2024.</font>
 					<br>
@@ -75,7 +75,7 @@
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 					<font style="font-weight:bold">VastTrack: Vast Category Visual Object Tracking</font>
 					<br>
-					<font color="#000000" >L. Peng, J. Gao, X. Liu, W. Li, S. Dong, Z. Zhang, H. Fan<sup>&dagger;</sup>, and L. Zhang<sup>&dagger;</sup> (&dagger;equal advising)</font>
+					<font color="#000000" >L. Peng, J. Gao, X. Liu, W. Li, S. Dong, Z. Zhang, H. Fan&dagger;, and L. Zhang&dagger; (&dagger;equal advising)</font>
 					<br>
 					<font>	arXiv:2403.03493, 2024. </font>
 					<br>
